Fixed errors and improved search bar UX
